samples/_failures_safe/1761343973_c0478f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db0953b7.c: In function ‘main’:
./samples/SAFE/__tmp_db0953b7.c:127:12: error: missing terminating " character
  127 |     printf("
      |            ^
./samples/SAFE/__tmp_db0953b7.c:127:5: error: expected expression at end of input
  127 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_db0953b7.c:127:5: error: expected declaration or statement at end of input
